--- a/GameRent.Api/GameRent.Api.csproj
+++ b/GameRent.Api/GameRent.Api.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\GameRent.Application\GameRent.Application.csproj" />
     <ProjectReference Include="..\GameRent.Domain\GameRent.Domain.csproj" />
+    <ProjectReference Include="..\GameRent.Infra.Command.Data\GameRent.Infra.Command.Data.csproj" />
     <ProjectReference Include="..\GameRent.Infra.Query.Data\GameRent.Infra.Query.Data.csproj" />
     <ProjectReference Include="..\GameRent.Infra\GameRent.Infra.Command.Data.csproj" />
     <ProjectReference Include="..\GameRent.Services\GameRent.Infra.Services.csproj" />
